istio/authorization-policies/allow-inventory.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-inventory
  namespace: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  rules:
  - from:
    - source:
        namespaces: ["logistics", "procurement"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT"]
