istio/authorization-policies/allow-procurement.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-procurement
  namespace: procurement
spec:
  rules:
  - from:
    - source:
        namespaces: ["logistics", "inventory"]
